--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<!doctype html><html lang="ru"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Яндекс.Дом</title><link rel="stylesheet" href="reset.css"><link rel="stylesheet" href="styles.css"></head><body><div id="app"></div><footer class="footer"><ul class="footer__list"><li class="footer__item"><a class="footer__link" href="/">Помощь</a></li><li class="footer__item"><a class="footer__link" href="/">Обратная связь</a></li><li class="footer__item"><a class="footer__link" href="/">Разработчикам</a></li><li class="footer__item"><a class="footer__link" href="/">Условия использования</a></li></ul><div class="footer__copyright">© 1997–2023 ООО «Яндекс»</div></footer><script src="vendors/react.production.min.js"></script><script src="vendors/react-dom.production.min.js"></script><script src="script.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Яндекс.Дом</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div id="app"></div>
+    <footer class="footer">
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a class="footer__link" href="/">Помощь</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="/">Обратная связь</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="/">Разработчикам</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="/">Условия использования</a>
+        </li>
+      </ul>
+      <div class="footer__copyright">© 1997–2023 ООО «Яндекс»</div>
+    </footer>
+    <script src="vendors/react.production.min.js"></script>
+    <script src="vendors/react-dom.production.min.js"></script>
+    <script src="vendors/babel.min.js"></script>
+    <script type="text/babel" src="tests.jsx"></script>
+  </body>
+</html>
